--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <section id="profile-card">
       <div class="pattern-card">
-        <img src="./images/image_converted.jpg" alt="Fettoumi Maya" class="profile-img">
+        <img src="image_converted.jpg" alt="Fettoumi Maya" class="profile-img">
       </div>
       <div class="content-img">
         <div class="name">
